Tokenizer test commit
A prototype of what we may adopt as the main branch, I mean check this out, it's awesome.

--- a/cs350team12/.classpath
+++ b/cs350team12/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/Users/jlhea/Documents/Code/eclipse-workspace/cs350team12/cs350-project-v01.jar"/>
+	<classpathentry kind="lib" path="cs350-project-v01.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
